--- a/Views/Chat/Room.cshtml
+++ b/Views/Chat/Room.cshtml
@@ -1,31 +1,39 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-
+    
 *@
 @{
     @model int
+    
 }
+@* <link href=" ~ /css/site.css" rel="stylesheet" />
+<style src=" ~ /css/site.css"></style> *@
+
 <h1>@ChatRoom.Controllers.ChatController.Rooms.GetValueOrDefault(Model)</h1>
-<div class="row">
-    <div class="col-12">
-        <input class="form-control" type="text" placeholder="User" id="User"></input>
-        <br>
-        <input class="form-control" type="text" placeholder="Text" id="Message"></input>
-        <br>
-        <div class="text-center">
-            <button id="btnSend" type="button" class="btn btn-success">Send</button>
-        </div>
-    </div>
-</div>
 
 <div class="row">
     <div class="col-6">
         <div id="Messages"></div>
     </div>
-        <div class="col-6">
+    <div class="col-6">
         <div id="Notifications"></div>
     </div>
 </div>
+
+<div class="container">
+    <div class="row justify-content-center fixed-bottom m-5 w-25 ">
+        <div class="col-12  p-4 ">
+            <input class="form-control" type="text" placeholder="User" id="User"></input>
+            <br>
+            <input class="form-control" type="text" placeholder="Text" id="Message"></input>
+            <br>
+            <div class="text-center">
+                <button id="btnSend" type="button" class="btn btn-success">Send</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
